--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "s": "cross-env NODE_ENV=development node dev-server.js"
   },
   "dependencies": {
-    "vue": "^2.4.4"
+    "vue": "^2.4.4",
+    "vue-touch": "^2.0.0-beta.4"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "copy-webpack-plugin": "^4.1.1",
     "cross-env": "^3.1.4",
     "css-loader": "^0.26.1",
